<resources>
    <string name="app_name">kotlin tip calculator</string>
    <string name="costs">Cost of Service</string>
    <string name="question">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="round_up">Round up tip?</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Tip amount: %s</string>
    <string name="dollar">$</string>
    <string name="default_tip">Tip amount: </string>

    <string name="primary_color">Primary color</string>
    <string name="secondary_color">Secondary color</string>
    <string name="tip_icon">tip_image</string>
    <string name="round_up_icon">round_up_icon</string>
</resources>